--- a/css/ivens-craft.css
+++ b/css/ivens-craft.css
@@ -56,3 +56,42 @@ Light Gray: #808F85;
 .ivens-craft footer{
 	background: #212119;
 }
+
+.arrow-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: calc(50% - 40.7px);
+  z-index: 9999;
+  width: 100%;
+  padding: 0 20px;
+	line-height: 0;
+}
+
+@media only screen and (min-width: 480px){
+	.arrow-container {
+		top: calc(50% - 43.1px);
+	}
+}
+@media only screen and (min-width: 768px){
+	.arrow-container {
+		top: calc(50% - 45.6px);
+	}
+}
+@media only screen and (min-width: 1200px){
+	.arrow-container {
+		top: calc(50% - 47.2px);
+	}
+}
+
+.arrow-container a{
+	padding: .8rem .1rem;
+	background: #fff;
+	border: 1px solid #212119;
+}
+
+.arrow-button svg {
+  width: 26px;
+  height: 26px;	
+}
