--- a/css/ivens-craft.css
+++ b/css/ivens-craft.css
@@ -89,6 +89,9 @@ Light Gray: #808F85;
 	padding: .8rem .1rem;
 	background: #fff;
 	border: 1px solid #212119;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
 }
 
 .arrow-button svg {
