--- a/css/ivens-craft.css
+++ b/css/ivens-craft.css
@@ -36,7 +36,7 @@ Light Gray: #808F85;
 .ivens-craft #bv-project a:hover,
 .ivens-craft #bv-project a:focus{
 	background: #0c0c3c;
-	border: 1px solid #0c0c3c;
+	border: 1px solid #fff;
 }
 /* Ivens Craft edition button alternate title for below and above 480px */
 @media only screen and (min-width: 480px){
