--- a/css/ivens-craft.css
+++ b/css/ivens-craft.css
@@ -95,6 +95,7 @@ Light Gray: #808F85;
   background: #fff;
   border: 2px solid #595959;
 }
+/* page side arrows developed with assistance from ChatGPT (https://chat.openai.com/chat) and Perplexity AI (https://www.perplexity.ai) */
 /* page side arrow containter */
 .ivens-craft .arrow-container{
   line-height: 0;
