--- a/css/ivens-craft.css
+++ b/css/ivens-craft.css
@@ -57,24 +57,24 @@ Light Gray: #808F85;
 		visibility: hidden;
 	}
 }
-.ivens-craft #bv-project a .regular-text{
+.ivens-craft #bv-project a .full-title{
 	display: none;
 	visibility: hidden;
 }
 @media only screen and (min-width: 480px){
-	.ivens-craft #bv-project a .regular-text{
+	.ivens-craft #bv-project a .full-title{
 		display: inline-block;
 		visibility: visible;
 	}
 }
 @media only screen and (min-width: 992px){
-	.ivens-craft #bv-project a .regular-text{
+	.ivens-craft #bv-project a .full-title{
 		display: none;
 		visibility: hidden;
 	}
 }
 @media only screen and (min-width: 1200px){
-	.ivens-craft #bv-project a .regular-text{
+	.ivens-craft #bv-project a .full-title{
 		display: inline-block;
 		visibility: visible;
 	}
