--- a/css/recovering-histories.css
+++ b/css/recovering-histories.css
@@ -36,6 +36,9 @@
 .materials .recovering-histories .right2{
   margin-right: 2rem;
 }
+.materials .recovering-histories .right3{
+  margin-right: 3rem;
+}
 .materials .recovering-histories .right4{
   margin-right: 4rem;
 }
@@ -61,7 +64,18 @@
 .materials .recovering-histories .doubleleftmargin{
   margin-left: 2rem;
 }
+.materials .recovering-histories .bottommargin{
+  margin-bottom: 1rem;
+}
+.materials .recovering-histories .halfbottommargin{
+  margin-bottom: .5rem;
+}
 /* variants of indent */
 .materials .recovering-histories .noindent{
   text-indent: 0;
+}
+/* list with overhang */
+.materials .recovering-histories .overhanglist{
+	margin: 0;
+	padding: 0 0 0 2.4rem;
 }
