--- a/css/style.css
+++ b/css/style.css
@@ -2811,12 +2811,12 @@ ol li ol{
 hr{
   height: 1px;
   border: 0;
-  border-top: 1px solid #bdc2bd;
+  border-top: 1px solid #58484b;
   margin: 1rem 0;
   padding: 0;
 }
 hr.section-divider{
-	border-top: 4px solid #bdc2bd;
+	border-top: 4px solid #58484b;
 }
 section + hr.section-divider{
 	margin: 1.5rem auto 0;
@@ -2827,7 +2827,7 @@ section + hr.section-divider{
 	}	
 }
 .content.recovered section + hr.section-divider{
-	border-top: 2px solid #bdc2bd;
+	border-top: 2px solid #58484b;
 	margin: 2.25rem auto 0;
 	width: calc(100% - 1rem);
 }
