--- a/css/recovering-histories.css
+++ b/css/recovering-histories.css
@@ -106,3 +106,9 @@
 .materials .recovering-histories .smallest{
 	font-size: .8em;
 }
+/* first set of column itesm in specified item */
+.materials .recovering-histories .row.liv_022004-1{
+  display: -webkit-flex;
+  display: flex;
+  justify-content: space-around;
+}
