--- a/css/recovering-histories.css
+++ b/css/recovering-histories.css
@@ -116,7 +116,7 @@
 /* Item-Specific Coding */
 
 /* item title in liv_022003 */
-.title.liv_022003{
+.liv_022003 .title{
   font-size: 1.1rem;
   font-style: normal;
   text-align: center;
@@ -127,20 +127,21 @@
   padding: 0;
 }
 /* first work placement */
-.firstword.liv_022003{
+.liv_022003 .firstword{
   margin-right: .6rem;
   display: flex;
   float: left;
 }
 /* capitalized first letter */
-.dropcap.liv_022003{
+.liv_022003 .dropcap{
   font-size: 3.7rem;
   margin-top: 1rem;
 }
 @media only screen and (min-width: 992px){
-  .dropcap.liv_022003{
+  .liv_022003 .dropcap{
     font-size: 4.2rem;
     margin-top: 1.1rem;
+  }
 }
 
 /* column specs on various pages in liv_022004 */
@@ -206,8 +207,14 @@
 .row.liv_022004-7 .item{
   margin: 0 1.5rem;
 }
+/* page divider */
+.liv_022004 hr:not(.milestone){
+  border-top: 1px solid #bdc2bd;
+  margin: 2.5rem 0 0;
+}
+
 /* closing halfline */
-.halfline.liv_022004{
+.liv_022004 .halfline.closing{
   width: 38%;
   border-top: 3px solid #58484b;
 }
