--- a/css/ivens-craft.css
+++ b/css/ivens-craft.css
@@ -84,6 +84,11 @@ Light Gray: #808F85;
 .ivens-craft main a:focus{
 	outline: 3px solid #60103d;
 }
+/* breakout quote borders */
+.ivens-craft aside.text-box{
+	border-top: 5px solid #2424b2;
+	border-bottom: 5px solid #2424b2;
+}
 /* scroll to top button coloring */
 .ivens-craft #topbutton{
 	background: #595959;
