--- a/css/ivens-craft.css
+++ b/css/ivens-craft.css
@@ -89,6 +89,11 @@ Light Gray: #808F85;
 	border-top: 5px solid #2424b2;
 	border-bottom: 5px solid #2424b2;
 }
+/* breakout quote author citation */
+.ivens-craft .right
+{
+	display: inherit;
+}
 /* scroll to top button coloring */
 .ivens-craft #topbutton{
 	background: #595959;
