--- a/css/ivens-craft.css
+++ b/css/ivens-craft.css
@@ -84,7 +84,7 @@ Light Gray: #808F85;
 	border: none;
 }
 @media only screen and (min-width: 480px){
-	.ivens-craft .figure.vertical a img{
+	.ivens-craft .figure.vertical img{
 		margin: 0 auto;
 		width: 70%;
 	}
