--- a/css/ivens-craft.css
+++ b/css/ivens-craft.css
@@ -79,7 +79,7 @@ Light Gray: #808F85;
 		visibility: visible;
 	}
 }
-/* object images */
+/* vertical images */
 @media only screen and (min-width: 480px){
 	.ivens-craft .figure.vertical img{
 		margin: 0 auto;
