--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ Table of Contents
 30. Site Sections
 31. 404 Page
 32. BIPOC Voices
+33. Recovering Histories
 */
 
 /*--------------------------------------*/
@@ -3747,6 +3748,16 @@ aside.warning-box.bv-essay{
 	aside.warning-box.bv-essay + .toc{
 		margin-top: 4rem;
 	}
+}
+
+
+/* 33. Recovering Histories */
+
+/* headings for outcomes section */
+.recovering h4{
+	font-weight: 400;
+	font-style: italic;
+	text-align: left;
 }
 
 
