--- a/css/ivens-craft.css
+++ b/css/ivens-craft.css
@@ -175,7 +175,7 @@ Light Gray: #808F85;
 	-webkit-border-radius: 8px;
 	-moz-border-radius: 8px;
 	border-radius: 8px;
-	padding: .8rem .1rem;
+	padding: .8rem 0rem;
 }
 @media only screen and (min-width: 992px){
 	.ivens-craft .arrow-container a{
